adding more stuff, if I was only better at docker...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - TERM=xterm-256color
-      - USER=will
+      - USER=sparx
     volumes:
       - /c/Users/willm/Documents/GitHub/kali-dev-container/data:/data
       - /c/Users/willm/Documents/GitHub/kali-dev-container/config:/home/sparx/config
